Add login flow tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.0.0",
@@ -40,6 +41,7 @@
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^8.3.0",
+    "cypress": "^12.9.0",
     "postcss": "^8.4.21",
     "postcss-loader": "^7.1.0",
     "storybook": "^6.5.16",
